Revert "A new cookbook"

--- a/.delivery/config.json
+++ b/.delivery/config.json
@@ -8,10 +8,5 @@
   "job_dispatch": {
     "version": "v2"
   },
-  "dependencies": [],
-  "delivery-truck": {
-    "publish": {
-      "chef_server": true
-    }
-  }
+  "dependencies": []
 }
