--- a/.delivery/build_cookbook/.kitchen.yml
+++ b/.delivery/build_cookbook/.kitchen.yml
@@ -8,14 +8,14 @@ provisioner:
   name: chef_zero
   encrypted_data_bag_secret_key_path: 'secrets/fakey-mcfakerton'
   data_bags_path: './data_bags'
+  product_name: chefdk
 
 platforms:
   - name: ubuntu-16.04
-  - name: centos-7.2
+  - name: centos-7.3
 
 suites:
   - name: default
     run_list:
-      - recipe[delivery_build::default]
       - recipe[test]
     attributes:
